--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "private": true,
   "dependencies": {
-    "@amcharts/amcharts4": "^4.10.15",
     "@angular/animations": "~10.1.5",
     "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.1.5",
@@ -23,17 +22,19 @@
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "@angular/service-worker": "~10.1.5",
+    "@swimlane/ngx-charts": "^17.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.6",
+    "@angular-devkit/build-angular": "^0.1102.2",
     "@angular/cli": "~10.1.6",
     "@angular/compiler-cli": "~10.1.5",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
